# Healthcare_Agentic_AI_System-

./: .gitignore  Dockerfile  README.md  complete.ipynb  docker-compose.yml  main.py  pyproject.toml  requirements-optional-ml.txt  requirements.txt
.github/workflows/: tests.yml
docs/: ARCHITECTURE.md
src/healthcare_ai_agent/: __init__.py
src/healthcare_ai_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/healthcare_ai_agent/voice/: __init__.py  base.py  demo.py  recorder.py  service.py  speech_to_text.py  text_to_speech.py
tests/: test_voice.py
