[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-ai-agent"
version = "0.1.0"
description = "Safety-first healthcare voice-agent research starter"
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mazyar Taghavi"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
