[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "healthcare-ai-agent"
version = "0.2.0"
description = "Safety-first synthetic healthcare agent with RAG, appointment actions, and constrained RL"
requires-python = ">=3.10,<3.14"
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Mazyar Taghavi"}]
dependencies = [
  "fastapi>=0.128,<0.140",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "httpx>=0.27,<1",
  "SQLAlchemy>=2.0,<2.1",
  "numpy>=2.0,<3",
]

[project.scripts]
healthcare-agent-demo = "healthcare_ai_agent.demo:main"
healthcare-agent-train = "healthcare_ai_agent.rl.trainer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
